--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package":"electron-builder",
+    "pack": "electron-builder",
+    "package": "electron-builder -p always",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "build":{"publish":[{"provider":"github", "owner":"iffy", "repo":"electron-updater-example"}]},
+  "build": {
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "yusuf-zafar",
+        "repo": "auto-update-electron",
+        "token":"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"
+      }
+    ]
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^22.0.0",
-    "electron-builder": "^23.6.0",
-    "electron-updater": "^5.3.0"
+    "electron-builder": "^23.6.0"
   },
   "dependencies": {
-    "electron-log": "^4.4.8"
+    "electron-log": "^4.4.8",
+    "electron-updater": "^5.3.0"
   }
 }
